--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{--ae-main-bg-color:hsl(0deg 0% 10%);--ae-primary-color:hsl(168deg 96% 42%);--ae-input-bg-color:hsl(225deg 6% 13%);--ae-input-border-color:hsl(214deg 5% 30%);--ae-panel-bg-color:hsl(225deg 5% 17%);--ae-panel-border-color:hsl(214deg 5% 30%);--ae-panel-border-radius:0px;--ae-subgroup-bg-color:hsl(0deg 0% 10%);--ae-subgroup-input-bg-color:hsl(225deg 6% 13%);--ae-subgroup-input-border-color:hsl(214deg 5% 30%);--ae-subpanel-bg-color:hsl(220deg 4% 14%);--ae-subpanel-border-color:hsl(214deg 5% 30%);--ae-subpanel-border-radius:8px;--ae-textarea-focus-color:hsl(210deg 3% 36%);--ae-input-focus-color:hsl(168deg 97% 41%);--ae-outside-gap-size:8px;--ae-inside-padding-size:8px;--ae-tool-button-size:34px;--ae-tool-button-radius:16px;--ae-generate-button-height:70px;--ae-cancel-color:hsl(0deg 84% 60%);--ae-max-padding:max(var(--ae-outside-gap-size),var(--ae-inside-padding-size));--ae-icon-color:hsl(168deg 96% 42%);--ae-icon-hover-color:hsl(0deg 0% 10%);--ae-icon-size:22px;--ae-nav-bg-color:hsl(0deg 0% 4%);--ae-nav-color:hsl(210deg 4% 80%);--ae-nav-hover-color:hsl(0deg 0% 4%);--ae-input-color:hsl(210deg 4% 80%);--ae-label-color:hsl(210deg 4% 80%);--ae-subgroup-input-color:hsl(0deg 100% 100%);--ae-placeholder-color:hsl(214deg 5% 30%);--ae-text-color:hsl(210deg 4% 80%);--ae-mobile-outside-gap-size:3px;--ae-mobile-inside-padding-size:3px;--ae-frame-bg-color:hsl(225deg 6% 13%);--ae-modal-bg-color:hsl(0deg 0% 10%);--ae-modal-icon-color:hsl(168deg 97% 41%);}/*BREAKPOINT_CSS_CONTENT*/
+:root{--ae-main-bg-color:hsl(0deg 0% 10%);--ae-primary-color:hsl(199deg 60% 60%);--ae-input-bg-color:hsl(225deg 6% 13%);--ae-input-border-color:hsl(214deg 5% 30%);--ae-panel-bg-color:hsl(225deg 5% 17%);--ae-panel-border-color:hsl(214deg 5% 30%);--ae-panel-border-radius:0px;--ae-subgroup-bg-color:hsl(0deg 0% 10%);--ae-subgroup-input-bg-color:hsl(225deg 6% 13%);--ae-subgroup-input-border-color:hsl(214deg 5% 30%);--ae-subpanel-bg-color:hsl(220deg 4% 14%);--ae-subpanel-border-color:hsl(214deg 5% 30%);--ae-subpanel-border-radius:8px;--ae-textarea-focus-color:hsl(210deg 3% 36%);--ae-input-focus-color:hsl(199deg 60% 60%);--ae-outside-gap-size:8px;--ae-inside-padding-size:8px;--ae-tool-button-size:34px;--ae-tool-button-radius:16px;--ae-generate-button-height:70px;--ae-cancel-color:hsl(357deg 50% 57%);--ae-max-padding:max(var(--ae-outside-gap-size),var(--ae-inside-padding-size));--ae-icon-color:hsl(210deg 4% 80%);--ae-icon-hover-color:hsl(0deg 0% 10%);--ae-icon-size:22px;--ae-nav-bg-color:hsl(0deg 0% 4%);--ae-nav-color:hsl(210deg 4% 80%);--ae-nav-hover-color:hsl(0deg 0% 4%);--ae-input-color:hsl(210deg 4% 80%);--ae-label-color:hsl(210deg 4% 80%);--ae-subgroup-input-color:hsl(210deg 4% 80%);--ae-placeholder-color:hsl(214deg 5% 30%);--ae-text-color:hsl(210deg 4% 80%);--ae-mobile-outside-gap-size:2px;--ae-mobile-inside-padding-size:2px;--ae-frame-bg-color:hsl(225deg 6% 13%);--ae-modal-bg-color:hsl(0deg 0% 10%);--ae-modal-icon-color:hsl(199deg 60% 60%);--generate-color:hsl(16deg 50% 48%);}/*BREAKPOINT_CSS_CONTENT*/
 
 /*
 Theme Name: DarkUX
@@ -443,13 +443,13 @@ body {
 
 .progressDiv .progress {
     width: 0%;
-    height: 3px;
-    background-color: var(--ae-primary-color);
+    height: 4px;
+    background-color: var(--generate-color);
     color: var(--ae-input-color);
     line-height: 20px;
     text-align: right;
     border-radius: 0;
-    padding: 0 2px;
+    padding: 0 4px;
     font-size: 12px;
 	white-space: nowrap;
 	font-weight: 600;
@@ -515,7 +515,7 @@ div.svelte-10ogue4>*:first-child.livePreview {
 	background-color: var(--ae-main-bg-color);
 	background-repeat: no-repeat;
 	background-position: 0 0;
-	background-image: conic-gradient(transparent, var(--ae-primary-color), transparent 30%);
+	background-image: conic-gradient(transparent, var(--generate-color), transparent 30%);
 	animation: rotate 4s linear infinite;
 }
 	
@@ -544,7 +544,7 @@ div.svelte-10ogue4>*:first-child.livePreview {
 	background-color: var(--ae-main-bg-color);
 	background-repeat: no-repeat;
 	background-position: 0 0;
-	background-image: conic-gradient(transparent, var(--ae-primary-color), transparent 30%);
+	background-image: conic-gradient(transparent, var(--generate-color), transparent 30%);
 	animation: rotate 4s linear infinite;
 }
 
@@ -1380,7 +1380,7 @@ div.svelte-15lo0d8>.form>* {
     pointer-events: none!important;
     width: 5px!important;
     height: 5px!important;
-    background-color: var(--ae-primary-color)!important;
+    background-color: var(--generate-color)!important;
     top: 2px !important;
     left: 2px !important;
 }
@@ -1628,6 +1628,15 @@ button.secondary:hover,
 button.primary:hover {  
     background: var(--ae-primary-color) !important;
     color: var(--ae-input-bg-color) !important;
+}
+
+[id$="_generate"].primary
+{
+	background-color: var(--generate-color) !important;
+}
+[id$="_generate"].primary:hover
+{
+	background-color: var(--generate-color) !important;
 }
 
 [id$="_generate"],
